--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,7 @@ builds:
       - -s -w -X main.Version={{.Version}} -X main.BuildDate={{.CommitDate}}
     ignore:
       - goos: darwin
-        goarch: 386
+        goarch: i386
       - goos: windows
         goarch: arm64
 
