Revert "Fix some typos, add nobanner option and improve visualization"
This reverts commit 74472542d692a01e3884fe33ad0f9470b13ac0d2.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,7 @@ builds:
       - -s -w -X main.Version={{.Version}} -X main.BuildDate={{.CommitDate}}
     ignore:
       - goos: darwin
-        goarch: i386
+        goarch: 386
       - goos: windows
         goarch: arm64
 
